crates/rulesteward-fapolicyd/tests/snapshots/fapd-E03__macro-defined-after-ref.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=2
[fapd-E03] sev=Error line=1 col=1 span=0..25 :: undefined macro reference `%langs`
[fapd-S02] sev=Style line=2 col=1 span=26..42 :: macro `%langs` defined after the first rule (move to file top)
