crates/rulesteward-fapolicyd/tests/snapshots/fapd-E03__undefined-macro-ref.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E03] sev=Error line=1 col=1 span=0..32 :: undefined macro reference `%missingmacro`
